util：FewModifyList/Map 快照遇 null 元素抛 NPE 且永不建成，读侧永久瘫痪
问题：
- 证据：FewModifyList.prepareRead 用 List.copyOf(write)、FewModifyMap 用
  Map.copyOf(write)——JDK 规定遇 null 抛 NPE；写侧 ArrayList/HashMap 接受
  add(null)/put(k,null)，类上无 null 禁止文档。
- 触发路径：写入 null 后任意读方法进 prepareRead 抛 NPE，快照未建成
  read 恒 null——每次读重复抛 NPE，直到某次写移除 null；多线程下故障面
  扩散到所有读者。同族 FewModifySortedMap 的 TreeMap 快照允许 null value，
  行为分叉证明约束从未统一。

修复：
- 快照改 new ArrayList<>(write)/new HashMap<>(write) + Collections
  .unmodifiable* 包装（保持只读契约不弱化），与 FewModifySortedMap 对齐
  统一家族契约。

验证：
- gradlew.bat :ZezeJavaTest:test --tests "*TestFnd739FewModifyNullSnapshot"
  通过（null 元素可读、null value 与 absent 可区分、写后快照重建、
  快照只读、非 null 内容不变）；修复前同测试 NPE 失败。