@@ -2,6 +2,7 @@ package Zeze.Util;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
@@ -36,7 +37,10 @@ public class FewModifyList<E> implements List<E>, RandomAccess, Cloneable {
 			writeLock.lock();
 			try {
 				if ((r = read) == null)
-					read = r = List.copyOf(write);
+					// ArrayList 拷贝允许 null 元素（FND7-39，对齐 FewModifySortedMap 的 TreeMap 快照）：
+					// List.copyOf 遇 null 抛 NPE 且快照建不成（read 恒 null），此后任意读方法
+					// 重复抛 NPE，读侧永久瘫痪。unmodifiable 包装保持快照只读契约不弱化。
+					read = r = Collections.unmodifiableList(new ArrayList<>(write));
 			} finally {
 				writeLock.unlock();
 			}
